[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Placeholders/en_turret.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemies/En_turret.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.8671, 14.4687 )

[node name="En_turret" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.383661, -0.170515 )
scale = Vector2( 1.37087, 1.61386 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_En_turret_area_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_screen_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="shoot"]
